// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test Basic Variable Declaration > test globalVariableTable variables 1`] = `
[
  "string",
  "boolean",
  "number",
  "integer",
  "object",
  "map",
]
`;

exports[`test Basic Variable Declaration > test remove variable, update variable, add variable by from a new json 1`] = `
[
  "object",
  "new_integer",
]
`;

exports[`test Basic Variable Declaration > test remove variable, update variable, add variable by from a new json 2`] = `[]`;

exports[`test Basic Variable Declaration > test simple variable declarations 1`] = `
{
  "declarations": [
    {
      "key": "string",
      "kind": "VariableDeclaration",
      "order": 0,
      "type": {
        "kind": "String",
      },
    },
    {
      "key": "boolean",
      "kind": "VariableDeclaration",
      "order": 1,
      "type": {
        "kind": "Boolean",
      },
    },
    {
      "key": "number",
      "kind": "VariableDeclaration",
      "order": 2,
      "type": {
        "kind": "Number",
      },
    },
    {
      "key": "integer",
      "kind": "VariableDeclaration",
      "order": 3,
      "type": {
        "kind": "Integer",
      },
    },
    {
      "key": "object",
      "kind": "VariableDeclaration",
      "order": 4,
      "type": {
        "kind": "Object",
        "properties": [
          {
            "key": "key1",
            "kind": "Property",
            "type": {
              "kind": "String",
            },
          },
          {
            "key": "key2",
            "kind": "Property",
            "type": {
              "kind": "Object",
              "properties": [
                {
                  "key": "key1",
                  "kind": "Property",
                  "type": {
                    "kind": "Number",
                  },
                },
              ],
            },
          },
          {
            "key": "key3",
            "kind": "Property",
            "type": {
              "kind": "Array",
            },
          },
          {
            "key": "key4",
            "kind": "Property",
            "type": {
              "items": {
                "kind": "Object",
                "properties": [
                  {
                    "key": "key1",
                    "kind": "Property",
                    "type": {
                      "kind": "Boolean",
                    },
                  },
                ],
              },
              "kind": "Array",
            },
          },
        ],
      },
    },
    {
      "key": "map",
      "kind": "VariableDeclaration",
      "order": 5,
      "type": {
        "keyType": {
          "kind": "String",
        },
        "kind": "Map",
        "valueType": {
          "kind": "Number",
        },
      },
    },
  ],
  "kind": "VariableDeclarationList",
}
`;

exports[`test Basic Variable Declaration > variable declaration subscribe 1`] = `
{
  "kind": "Number",
}
`;

exports[`test Basic Variable Declaration > variable declaration subscribe 2`] = `
{
  "kind": "Object",
  "properties": [
    {
      "key": "key1",
      "kind": "Property",
      "type": {
        "kind": "String",
      },
    },
  ],
}
`;

exports[`test Basic Variable Declaration > variable declaration subscribe 3`] = `
{
  "kind": "Object",
  "properties": [
    {
      "key": "key1",
      "kind": "Property",
      "type": {
        "kind": "Number",
      },
    },
  ],
}
`;
